k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secrets-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: secrets.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: secret-service
                port:
                  number: 8080
